--- a/2021519_Q2/FIFO/Makefile
+++ b/2021519_Q2/FIFO/Makefile
@@ -1,5 +1,9 @@
 default:
-	sudo gcc -o fifo_p1 fifo_p1.c
-	sudo gcc -o fifo_p2 fifo_p2.c
+	gcc -o fifo_p1 fifo_p1.c
+	gcc -o fifo_p2 fifo_p2.c
 clean:
 	rm fifo_p1 fifo_p2
+
+rm:	
+	rm myfifo2
+	rm myfifo
