--- a/2021519_Q2/Shared-Memory/Makefile
+++ b/2021519_Q2/Shared-Memory/Makefile
@@ -2,6 +2,6 @@ default:
 	gcc -o shmem_receiver shmem_receiver.c
 	gcc -o shmem_sender shmem_sender.c
 
-remove:
+clean:
 	rm shmem_receiver
 	rm shmem_sender
