Final commit pakka

--- a/2021519_Q1/Makefile
+++ b/2021519_Q1/Makefile
@@ -4,17 +4,22 @@ default:
 	gcc -o Q1a_Semaphore Q1a_Semaphore.c
 	gcc -o Q1a_strict_ordering Q1a_strict_ordering.c
 	gcc -o Q1b_Bowls Q1b_Bowls.c
+	gcc -o Q1b_Bowls_strictord Q1b_Bowls_strictord.c
 
-semaphore:
+1a_semaphore:
 	gcc -o Q1a_Semaphore Q1a_Semaphore.c
 
-strictord:
+1a_strictord:
 	gcc -o Q1a_strict_ordering Q1a_strict_ordering.c
 
-bowls:
+1b_bowls:
 	gcc -o Q1b_Bowls Q1b_Bowls.c
+
+1b_strictord:
+	gcc -o Q1b_Bowls_strictord Q1b_Bowls_strictord.c
 
 clean:
 	rm Q1a_Semaphore
 	rm Q1a_strict_ordering
 	rm Q1b_Bowls
+	rm Q1b_Bowls_strictord
